single line input in chat
saved changes

--- a/templates/base.html
+++ b/templates/base.html
@@ -329,32 +329,37 @@
                             })
                             .then(() => {
                                 appendMessage(`Enter the following Columns for ${module} to perform ${action}.`, 'bot');
-                                appendMessage(`Enter the ${columns_keys[Object.keys(columns).length]}`, 'bot')
-                            }
-                            )
+                                // appendMessage(`Enter the ${columns_keys[Object.keys(columns).length]}`, 'bot');
+                                appendMessage(`Enter the following columns ${columns_keys}`,'bot');
+                            })
                             .catch(error => {
                                 console.error('Error:', error);
                             });
 
                         // columns_keys = ['PRODUCT_NAME', 'UOM', 'COST','QUANTITY_ON_HAND','STATUS'];
                         // expected_cols = columns_keys.length;
-
                     }
                     else {
                         appendMessage('Enter valid action.', 'bot');
                     }
                 }
-                else if (Object.keys(columns).length != columns_keys.length) {
+                else if(columns_keys.length === input.split(',').length){
                     appendMessage(`${input}`, 'user');
-                    columns[columns_keys[Object.keys(columns).length]] = input;
-                    if (action == 'edit' && Object.keys(filter).length == 0 && Object.keys(columns).length == columns_keys.length) {
-                        alert(columns);
-                        alert(filter);
+                    let x=input.split(',');
+                    for (let i in columns_keys){
+                        columns[columns_keys[i]]=x[i];
+                    }
+                    if (action == 'edit' && Object.keys(filter).length == 0) {
+                        // alert(Object.keys(columns));
+                        // alert(Object.keys(filter));
                         filter = { ...columns };
                         columns = {};
+                        // alert(Object.keys(columns));
+                        // alert(Object.keys(filter));
+                        appendMessage(`Enter the following columns ${columns_keys}`,'bot');
                     }
-                    else if (Object.keys(columns).length == columns_keys.length) {
-                        if (action == 'delete') {
+                    else {
+                        if(action==='delete'){
                             filter = columns;
                             columns = {};
                         }
@@ -365,20 +370,55 @@
                             },
                             body: JSON.stringify({ 'module': module, 'action': action, 'filter': filter, 'new_data': columns }),
                         })
-                            .then(response => response.json())
-                            .then(data => {
-                                appendMessage(`${data}`, 'bot');
-                            })
-                            .catch(error => {
-                                console.error('Error:', error);
-                            });
+                        .then(response => response.json())
+                        .then(data => {
+                            appendMessage(`${data}`, 'bot');
+                        })
+                        .catch(error => {
+                            console.error('Error:', error);
+                        });
                         appendMessage('Action was successfully performed', 'bot');
                         appendMessage('Wanna Continue?', 'bot');
                     }
-                    else {
-                        appendMessage(`Enter the ${columns_keys[Object.keys(columns).length]}`, 'bot');
-                    }
                 }
+                // else if (Object.keys(columns).length != columns_keys.length) {
+                //     appendMessage(`${input}`, 'user');
+                //     columns[columns_keys[Object.keys(columns).length]] = input;
+                //     if (action == 'edit' && Object.keys(filter).length == 0 && Object.keys(columns).length == columns_keys.length) {
+                //         alert(Object.keys(columns));
+                //         alert(Object.keys(filter));
+                //         filter = { ...columns };
+                //         columns = {};
+                //         alert(Object.keys(columns));
+                //         alert(Object.keys(filter));
+                //         appendMessage(`Enter the ${columns_keys[Object.keys(columns).length]}`, 'bot')
+                //     }
+                //     else if (Object.keys(columns).length == columns_keys.length) {
+                //         if (action == 'delete') {
+                //             filter = columns;
+                //             columns = {};
+                //         }
+                //         fetch('/perform/', {
+                //             method: 'POST',
+                //             headers: {
+                //                 'Content-Type': 'application/json',
+                //             },
+                //             body: JSON.stringify({ 'module': module, 'action': action, 'filter': filter, 'new_data': columns }),
+                //         })
+                //             .then(response => response.json())
+                //             .then(data => {
+                //                 appendMessage(`${data}`, 'bot');
+                //             })
+                //             .catch(error => {
+                //                 console.error('Error:', error);
+                //             });
+                //         appendMessage('Action was successfully performed', 'bot');
+                //         appendMessage('Wanna Continue?', 'bot');
+                //     }
+                //     else {
+                //         appendMessage(`Enter the ${columns_keys[Object.keys(columns).length]}`, 'bot');
+                //     }
+                // }
                 else {
                     appendMessage(`${input}`, 'user');
                     if (input == 'yes') {
