--- a/customer_ledger_entries/templates/CustomerLedgerEntry/display_customer_ledger_entries.html
+++ b/customer_ledger_entries/templates/CustomerLedgerEntry/display_customer_ledger_entries.html
@@ -21,7 +21,7 @@
             <th>Customer ID</th>
             <th>Sales Invoice ID</th>
             <th>Amount</th>
-            <th>Status</th>
+            <th>Paid Date</th>
             <th>Actions</th>
         </tr>
     </thead>
