--- a/templates/base.html
+++ b/templates/base.html
@@ -203,7 +203,6 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <button id="dark-mode-toggle">Toggle Dark Mode</button>
                 {% block extra_nav %}{% endblock %}
                 {%if user.is_authenticated%}
                 <li class="nav-item">
@@ -280,8 +279,6 @@
     <script>
         document.addEventListener('DOMContentLoaded', function () {
 
-
-
             const chatMessages = document.getElementById('chat-messages');
             const chatInput = document.getElementById('chat-input');
             const sendMessageBtn = document.getElementById('send-message');
@@ -350,12 +347,12 @@
                         columns[columns_keys[i]]=x[i];
                     }
                     if (action == 'edit' && Object.keys(filter).length == 0) {
-                        // alert(Object.keys(columns));
-                        // alert(Object.keys(filter));
+                        //alert(Object.keys(columns));
+                        //alert(Object.keys(filter));
                         filter = { ...columns };
                         columns = {};
-                        // alert(Object.keys(columns));
-                        // alert(Object.keys(filter));
+                        //alert(Object.keys(columns));
+                        //alert(Object.keys(filter));
                         appendMessage(`Enter the following columns ${columns_keys}`,'bot');
                     }
                     else {
@@ -380,45 +377,48 @@
                         appendMessage('Action was successfully performed', 'bot');
                         appendMessage('Wanna Continue?', 'bot');
                     }
-                }
-                // else if (Object.keys(columns).length != columns_keys.length) {
-                //     appendMessage(`${input}`, 'user');
-                //     columns[columns_keys[Object.keys(columns).length]] = input;
-                //     if (action == 'edit' && Object.keys(filter).length == 0 && Object.keys(columns).length == columns_keys.length) {
-                //         alert(Object.keys(columns));
-                //         alert(Object.keys(filter));
-                //         filter = { ...columns };
-                //         columns = {};
-                //         alert(Object.keys(columns));
-                //         alert(Object.keys(filter));
-                //         appendMessage(`Enter the ${columns_keys[Object.keys(columns).length]}`, 'bot')
-                //     }
-                //     else if (Object.keys(columns).length == columns_keys.length) {
-                //         if (action == 'delete') {
-                //             filter = columns;
-                //             columns = {};
-                //         }
-                //         fetch('/perform/', {
-                //             method: 'POST',
-                //             headers: {
-                //                 'Content-Type': 'application/json',
-                //             },
-                //             body: JSON.stringify({ 'module': module, 'action': action, 'filter': filter, 'new_data': columns }),
-                //         })
-                //             .then(response => response.json())
-                //             .then(data => {
-                //                 appendMessage(`${data}`, 'bot');
-                //             })
-                //             .catch(error => {
-                //                 console.error('Error:', error);
-                //             });
-                //         appendMessage('Action was successfully performed', 'bot');
-                //         appendMessage('Wanna Continue?', 'bot');
-                //     }
-                //     else {
-                //         appendMessage(`Enter the ${columns_keys[Object.keys(columns).length]}`, 'bot');
-                //     }
-                // }
+                } 
+                /*else if (Object.keys(columns).length != columns_keys.length) {
+                    appendMessage(`${input}`, 'user');
+                    columns[columns_keys[Object.keys(columns).length]] = input;
+                    if (action == 'edit' && Object.keys(filter).length == 0 && Object.keys(columns).length == columns_keys.length) {
+                        alert(Object.keys(columns));
+                        alert(Object.keys(filter));
+                        filter = { ...columns };
+                        columns = {};
+                        alert(Object.keys(columns));
+                        alert(Object.keys(filter));
+                        appendMessage(`Enter the ${columns_keys[Object.keys(columns).length]}`, 'bot')
+                    }
+                    else if (Object.keys(columns).length == columns_keys.length) {
+                        if (action == 'delete') {
+                            filter = columns;
+                            columns = {};
+                        }
+                        alert(module);
+                        alert(action);
+                        alert(Object.keys(columns))
+                        fetch('/perform/', {
+                            method: 'POST',
+                            headers: {
+                                'Content-Type': 'application/json',
+                            },
+                            body: JSON.stringify({ 'module': module, 'action': action, 'filter': filter, 'new_data': columns }),
+                        })
+                            .then(response => response.json())
+                            .then(data => {
+                               appendMessage(`${data}`, 'bot');
+                            })
+                            .catch(error => {
+                                console.error('Error:', error);
+                            });
+                        appendMessage('Action was successfully performed', 'bot');
+                        appendMessage('Wanna Continue?', 'bot');
+                    }
+                    else {
+                        appendMessage(`Enter the ${columns_keys[Object.keys(columns).length]}`, 'bot');
+                    }
+                }*/
                 else {
                     appendMessage(`${input}`, 'user');
                     if (input == 'yes') {
