--- a/templates/base.html
+++ b/templates/base.html
@@ -163,7 +163,7 @@
             background-color: #35A29F; color: white; border-radius: 20px;
         }
 
-        .grid-container * {
+        /* .grid-container * {
             color: white;
             background-color: black;
         }
@@ -182,7 +182,7 @@
 
         table tr{
             border: 2px solid blue;
-        }
+        } */
 
         .table-header{
             font-size: 20px;
